--- a/index.html
+++ b/index.html
@@ -9,16 +9,45 @@
 </head>
 
 <body>
+    <!-- I used the nav component-->
     <nav class="nav justify-content-center">
         <a class="nav-link" href="#">Introduction</a>
         <a class="nav-link" href="#">Research</a>
         <a class="nav-link" href="#">Problem Statement</a>
         <a class="nav-link" href="#">Iteration & Testing</a>
         <a class="nav-link" href="#">Final Prototype</a>
-      </nav>
-      
+    </nav>
+
+    <!-- I used the jumbotron component-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Introduction</h1>
+        </div>
+    </div>
+
+    <!-- I used the card component-->
+    <div class="card" style="width: 18rem;">
+        <img src="./images/cue.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Cue Planner Mobile Application
+
+            The Cue planner app is a fun and innovative way to keep up with daily reminders. Imagine a fusion of Google and Apple calendar apps... Minimalism, creativity, innovation, and functionality.
+            </p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./images/pcos.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">PCOS Challenge Charity Redesign
+
+            The PCOS Challege is a charity concerning polycystic ovarian syndrome in women. Their website and branding was extremely outdated, taking away from the significance of the cause. Our team took great pride in updating the web-design, while staying true to the PCOS branding and color usage/gradient. 
+            </p>
+        </div>
+      </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 
 
 
