--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
                 </p>
             </div>
         </div>
+                <!-- I used the jumbotron component-->
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Final Prototype</h1>
+                    </div>
+                </div>
+            <!-- I used the card component-->
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <p class="card-text">Click here!
+                    </p>
+                </div>
+            </div>
+                <!-- I used the card component-->
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <p class="card-text">Click here!
+                        </p>
+                    </div>
+                </div>
+                    <!-- I used the nav component-->
+    <nav class="nav justify-content-center">
+        <a class="nav-link" href="#">Introduction</a>
+        <a class="nav-link" href="#">Research</a>
+        <a class="nav-link" href="#">Problem Statement</a>
+        <a class="nav-link" href="#">Iteration & Testing</a>
+        <a class="nav-link" href="#">Final Prototype</a>
+    </nav>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
